# ShigaPass

./: .gitignore  README.md  pyproject.toml
shigapass/: __init__.py  __main__.py  __version__.py  blast.py  cli.py  config.py  main.py  typing.py  utils.py
test/Input/: ShigaPass_test.txt
test/ShigaPass_Results/: ShigaPass_Flex_summary.csv  ShigaPass_summary.csv
test/ShigaPass_Results/ERR5888634/: adk_blastout.txt  crispr_allrecords.txt  crispr_blastout.txt  flic_allrecords.txt  flic_blastout.txt  flic_records.txt  fumC_blastout.txt  gyrB_blastout.txt  icd_blastout.txt  ipaH_allrecords.txt  ipaH_blastout.txt  mdh_blastout.txt  purA_blastout.txt  recA_blastout.txt  rfb_allrecords.txt  rfb_blastout.txt
test/ShigaPass_Results/ERR5952732/: POAC_allrecords.txt  POAC_blastout.txt  adk_blastout.txt  crispr_allrecords.txt  crispr_blastout.txt  flic_allrecords.txt  flic_blastout.txt  flic_records.txt  fumC_blastout.txt  gyrB_blastout.txt  icd_blastout.txt  ipaH_allrecords.txt  ipaH_blastout.txt  mdh_blastout.txt  purA_blastout.txt  recA_blastout.txt  rfb_allrecords.txt  rfb_blastout.txt
test/ShigaPass_Results/ERR5976293/: additionalrfb_allrecords.txt  additionalrfb_blastout.txt  adk_blastout.txt  crispr_allrecords.txt  crispr_blastout.txt  flic_allrecords.txt  flic_blastout.txt  flic_records.txt  fumC_blastout.txt  gyrB_blastout.txt  icd_blastout.txt  ipaH_allrecords.txt  ipaH_blastout.txt  mdh_blastout.txt  purA_blastout.txt  recA_blastout.txt  rfb_blastout.txt
test/ShigaPass_Results/ERR5982186/: additionalrfb_blastout.txt  adk_blastout.txt  crispr_allrecords.txt  (+12 more)
